main.css
@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700&display=swap");

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --primary-clr: hsl(0, 0%, 63%);
  --secondary-clr: hsl(0, 0%, 27%);
  --black-clr: hsl(0, 0%, 0%);
  --white-clr: hsl(0, 0%, 100%);
  --accent-clr: rgb(185, 129, 24);
  --btn-clr: hsl(39, 51%, 36%);
}

/* typography */
body {
  font-family: "Spartan" sans-serif;
  font-size: 18px;
  line-height: 1.6;
  font-weight: 500;
  overflow-x: hidden;
}

/* general */
.container {
  width: 100%;
}

#skyline {
  width: 100%;
  height: 20%;

  background-blend-mode: multiply;
}
/* navbar */
.navbar {
  display: flex;
  width: 100%;
  height: auto;
}

.navbar-brand {
  padding: 0 2em;
}
.navbar-nav {
  list-style: none;
}
.nav-link {
  text-decoration: none;
  color: var(--white-clr);
  position: relative;
  display: inline-block;
}
.nav-link::after {
  content: "";
  position: absolute;
  background-color: var(--white-clr) !important;
  color: var(--white-clr);
  transform: scaleX(0);
  height: 2px;
  width: 100%;
  bottom: 0;
  left: 0;
  transform-origin: center;
  transition: all 300ms ease;
}

.nav-link:hover::after {
  transform-origin: center;
  transform: scaleX(1);
}
.nav-link:hover,
.nav-link:active {
  color: var(--white-clr);
}
.nav-item {
  padding: 0 1em;
}
.navbar-toggler-icon,
.navbar-toggler {
  border-color: rgb(0, 0, 0);
}
.cart-icon {
  display: flex;
  justify-content: flex-end;
}
#cartIcon {
  font-size: 26px;
}

#cartIcon:hover {
  color: var(--accent-clr);
}

#itemsQuantityBadge {
  height: 20px;
  width: 20px;
  padding: 0.25em;
  position: relative;
  left: -5px;
}

/* Hero / Carousel */

.shopnow-btn {
  font-size: 26px;
  text-transform: uppercase;
  text-decoration: none;
  color: var(--black-clr);
  letter-spacing: 0.5em;
  display: inline-block;
}

.long-arrow {
  font-size: 34px;
}

/* hover pulse effect */
.shopnow-btn:hover {
  color: var(--accent-clr);
  animation: shake 0.7s linear;
  animation-iteration-count: infinite;
}
@keyframes shake {
  0% {
    transform: translateX(10px);
  }
  100% {
    transform: translateX(0px);
  }
}

/* products */
.products-grid {
  width: 100%;
  height: auto;
}

.grid-item {
  padding: 2em;
  text-align: center;
}
.grid-item img {
  max-width: 320px;
  max-height: 320px;
}
.item-name {
  padding-top: 0.5em;
}
.item-size {
  color: var(--secondary-clr);
}

.item-price {
  color: var(--accent-clr);
}
.img-container {
  position: relative;
  display: inline-block;
  overflow: hidden;
}

.btn-add {
  background-color: var(--btn-clr);
  font-weight: 600;
  color: var(--white-clr);
  transform: translateX(200%);
  width: 50%;
  position: absolute;
  bottom: 1em;
  left: 0em;
}
#cartPlusIcon {
  font-size: 20px;
}

.img-container:hover {
  cursor: pointer;
  opacity: 0.7;
}
.img-container:hover .btn-add {
  transform: translateX(101%);
  transition: all 0.5s ease-in-out;
  color: white;
}
.img-container:hover #cartPlusIcon {
  color: white;
}

/* cart display */
.cart-overlay {
  background-color: rgb(221, 219, 219);
  position: absolute;
  top: 0;
  right: 0;
  height: auto;
  width: 40vw;
  transform: translateX(100%);
  transition: all 0.3s ease-in-out;
  z-index: 3;
}

.fa-window-close {
  font-size: 30px;
}

.showCart {
  transform: translateX(0%);
  transition: all 0.3s ease-in-out;
}

.cart {
  padding: 2em;
  height: auto;
  display: flex;
  flex-direction: column;
}

.cart-content {
  width: 100%;
  height: auto;
}

.cart h2 {
  text-align: center;
  text-transform: capitalize;
  width: 100%;
}

.cart-item {
  display: flex;
  width: 100%;
  align-items: center;
  padding: 1em;
  border-bottom: 1px solid var(--primary-clr);
}
.cart-item__img {
  max-width: 120px;
  max-height: 120px;
}
.cart-item__text {
  flex: 2;
  padding: 0 1em;
}
.cart-item__remove {
  cursor: pointer;
  color: hsl(0, 67%, 49%);
}
.cart-item__remove:hover {
  text-decoration: underline;
}

.qty-display {
  padding: 0 1em;
  text-align: center;
  line-height: 1;
}

.item-qty {
  margin: auto 0;
}
#clearCartBtn {
  width: 10em;
  font-size: 11px;
  align-self: flex-end;
  margin-top: 1em;
}
.cart-footer {
  justify-content: flex-end;
  margin: 2em 0;
  padding: 1em;
  background-color: white;
}
#checkoutBtn {
  width: 12em;
  font-weight: 700;
  color: white;
  background-color: var(--accent-clr);
  border: none;
}

/* about */

.about-h2 {
  text-transform: uppercase;
}
.about-p {
  color: var(--secondary-clr);
}
#leaf {
  max-width: 350px;
  max-height: 350px;
}
/* footer */
footer {
  width: 100%;
  background: url(./images/line-doodle.png) right no-repeat;
}
.icons {
  display: flex;
  align-items: center;
}

.soc-icons {
  font-size: 45px;
  padding-right: 1em;
}
.fa-phone {
  font-size: 40px;
}
.fab:hover,
.fas:hover {
  color: var(--accent-clr);
  cursor: pointer;
}

/* media query */
@media (max-width: 990px) {
  .carousel,
  .slide {
    width: 100% !important;
  }

  .nav-item {
    padding-left: 2.25em;
  }
  #skyline {
    height: auto;
  }
  .cart-icon,
  #cartIcon {
    padding: 0.25em 0;
  }

  .cart-icon {
    position: absolute;
    top: 5px;
    right: 5em;
  }
  #leaf {
    display: none;
  }
  .img-container:hover .btn-add {
    transform: translateX(100%);
  }
  .cart-overlay {
    width: 75vw;
  }
}
@media (max-width: 550px) {
  footer {
    background: none;
  }

  .soc-icons {
    font-size: 35px;
    padding-right: 1em;
  }
  .fa-phone {
    font-size: 33px;
  }

  #skyline {
    height: auto;
  }

  .cart-icon,
  #cartIcon {
    padding: 0.25em 0;
  }

  .grid-item img {
    max-width: 300px;
  }
  .cart-overlay {
    width: 90vw;
  }
}
/* attr */
.attribution {
  font-size: 15px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

